9 June 2004:  Menelaos Karavelas
- added some more assertion checks in test_types.h (when testing the
  assignment operator)

5 June 2004:  Menelaos Karavelas
- in io_aux.h replaced char* by const std::string& to avoid warnings by
  SunPro CC
- fixed typo in Segment_Voronoi_diagram_2.C; VC7 was giving a warning
  about it

4 June 2004:  Menelaos Karavelas
- fixed bug in find_faces_to_split in Segment_Voronoi_diagram_2.C: the
  method was not working when the faces to be split were infinite
- added one more operator() in Svd_oriented_side_C2 (needed for the
  fix above) and propagated the change so that all traits and all
  filtering mechanisms can use it.

31 May 2004:  Menelaos Karavelas
- fix bug in insert_segment in Segment_Voronoi_diagram_2.C

30 May 2004:  Menelaos Karavelas
- added test suite for one-level and hierarchy algorithms
Documentation:
- added spec for the draw_dual_edge method that takes an edge circulator
- added specs for the draw_dual_edge method that takes an edge
  iterator (either All_edges_iterator or Finite_edges_iterator)
- removed preconditions that were not preconditions in draw_dual_edge
Code:
- Segment_Voronoi_diagram_2 class: added draw_dual_edge methods
  that take edge iterators and circulators
- Segment_Voronoi_diagram_2 class: fixed bug in swap method
- Segment_Voronoi_diagram_2 class: fixed bug in insertion of a segment
- Segment_Voronoi_diagram_2 class: renamed the ds() method to
  data_structure() so that it conforms with the doc
- Segment_Voronoi_diagram_2 class: added code for copy constructor and
  assignment operator
- Simple_container_wrapper class: added type for const_iterator
- Simple_container_wrapper class: added begin() and end() methods
- fixed bug in traits related to the usage Filtered_exact as the
  number type
- added constructor in hierarchy that takes two input interators
- fixed bugs in copy constructor, assignment operator and swap method
  of the segment Voronoi hierarchy class
